...
              >
                <Text style={styles.loginText}>Log In</Text>
              </TouchableOpacity>
              <View style={styles.createForgetSection}>
                <Link
                  navFunction={() => NavigationService.navigate('Signup')}
                  text="Create an Account"
                  testID={'Create Account Login'}
                />
                <Text style={styles.separator}>&#124;</Text>
                <Link
                  navFunction={() => NavigationService.navigate('ForgotPassword')}
                  text="Forgot Password?"
...
